ui: use auto width for small screens to fix wrapping on mobile

--- a/resources/css/screen.scss
+++ b/resources/css/screen.scss
@@ -20,6 +20,10 @@ body {
 .container {
   width: 960px;
   margin: 0 auto;
+
+   @media screen and (max-width: 960px) {
+     width: auto;
+   }
 }
 
 .nav {
